Update code coverage configuration.

--- a/tox.ini
+++ b/tox.ini
@@ -19,5 +19,4 @@ setenv =
 
 commands =
     nosetests --cover-erase
-    coverage xml --include=syra/*
-    xsltproc transform.xslt coverage.xml
+    coverage report
