The API will now default to using SYRA_ environment variables
 - SYRA_RESELLER_ID
 - SYRA_API_KEY

You can instantiate with alternate values manually, however this is over great convenience - particularly for the test suite.

--- a/tox.ini
+++ b/tox.ini
@@ -15,8 +15,8 @@ usedevelop = True
 
 setenv =
     PYTHONPATH={toxinidir}:{env:PYTHONPATH:}
-    RESELLER_ID={env:RESELLER_ID:}
-    API_KEY={env:API_KEY:}
+    SYRA_RESELLER_ID={env:SYRA_RESELLER_ID:}
+    SYRA_API_KEY={env:SYRA_API_KEY:}
 
 commands =
     nosetests
