Drop support for Python 2.6 from tox.ini and fix coverage reporting

--- a/tox.ini
+++ b/tox.ini
@@ -1,19 +1,19 @@
 [tox]
-envlist = py{26,27}
+envlist = py27
 skip_missing_interpreters = True
 
 [testenv]
 basepython =
-    py26: python2.6
     py27: python2.7
 
 deps =
     coverage
     nose
 
-usedevelop = True
-
 setenv =
+    NOSE_WITH_COVERAGE=1
+    NOSE_COVER_PACKAGE=syra
+    NOSE_COVER_BRANCHES=1
     PYTHONPATH={toxinidir}:{env:PYTHONPATH:}
     SYRA_RESELLER_ID={env:SYRA_RESELLER_ID:}
     SYRA_API_KEY={env:SYRA_API_KEY:}
