Disable log capture when running nose
 - fixes issue with failures due to bad logging in suds

--- a/tox.ini
+++ b/tox.ini
@@ -14,6 +14,7 @@ setenv =
     NOSE_WITH_COVERAGE=1
     NOSE_COVER_PACKAGE=syra
     NOSE_COVER_BRANCHES=1
+    NOSE_NOLOGCAPTURE=1
     PYTHONPATH={toxinidir}:{env:PYTHONPATH:}
     SYRA_RESELLER_ID={env:SYRA_RESELLER_ID:}
     SYRA_API_KEY={env:SYRA_API_KEY:}
