updates for python3 and live test integration

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,16 @@ env:
   - NOSE_COVER_BRANCHES=1
   - NOSE_NOLOGCAPTURE=1
 script:
-- nosetests
+- tox
 python:
 - "2.7"
+- "3.6"
+matrix:
+  include:
+    - python: 3.7
+      dist: xenial
+      sudo: true
 install:
-- pip install .
+- pip install tox-travis
+script:
+- tox
