--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,15 @@
 [tox]
-envlist = py27
+envlist = py27,py37
 skip_missing_interpreters = True
 
 [testenv]
-basepython =
-    py27: python2.7
+usedevelop = True
 
 deps =
     coverage
+    envparse
     nose
+    six
 
 setenv =
     NOSE_WITH_COVERAGE=1
@@ -18,6 +19,7 @@ setenv =
     PYTHONPATH={toxinidir}:{env:PYTHONPATH:}
     SYRA_RESELLER_ID={env:SYRA_RESELLER_ID:}
     SYRA_API_KEY={env:SYRA_API_KEY:}
+    py37: PYTHONSSLVERIFY=0
 
 commands =
     nosetests
