--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,3 @@
-include MANIFEST.in
-include requirements.txt
+include AUTHORS LICENSE requirements.txt
+recursive-include syra *
+recursive-exclude * *.py[co]
