--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,22 @@
 language: python
+dist: xenial
+cache: pip
+
+python:
+  - "2.7"
+  - "3.6"
+  - "3.7"
+  - "3.8"
+
+matrix:
+  fast_finish: true
+
+install:
+  - pip install tox-travis
+
+script:
+  - tox
+
 env:
   global:
   - secure: |-
@@ -13,17 +31,26 @@ env:
   - NOSE_COVER_PACKAGE=syra
   - NOSE_COVER_BRANCHES=1
   - NOSE_NOLOGCAPTURE=1
-script:
-- tox
-python:
-- "2.7"
-- "3.6"
-matrix:
-  include:
-    - python: 3.7
-      dist: xenial
-      sudo: true
-install:
-- pip install tox-travis
-script:
-- tox
+
+deploy:
+  provider: pypi
+  user: goodtune
+  distributions: sdist bdist_wheel
+  skip_existing: true
+  password:
+    secure: "tXwXDzgSdnd+mOuXn9KXhowHy+x0ZZQZiAqkfdooTyC5yTLT+LL9keCsN9dm\
+             JwEaNTtsp/1vxmX26WhKTMXNrJmvWqgGKut8eRg0atZVD4SmOxl2Ek/QNj4D\
+             /fZ8qgzMkVavZFBr82UOj9SIJ7l4HTwf18CGFSWihqPbVrofL86VmyznBPUo\
+             4ZBpiBgdtL9QP4qkrr7ECJrwnUY7mobBY+6KE91ELEi7MDUyx/Z2FuSADEJ2\
+             xL4lHn5esYZo8isZOsnIbmRFle02ziDdyVPB+5OqHNF+QgqwhBQIrf6rrB3J\
+             5ebfEnJwTfvNwx0qeiSd+XxM3xkCKgBqLj37MHkAoTflSu/R146PHuE/QqFs\
+             lY90knxibFJuBYNpVkVIaHaeccpZwELKSbzc534sKBe69XRac6g4g3AOootW\
+             E7dq/+LpdMlCuQhoowfdRd8asAw8f3n4Oz91GnzYT46BzZBL8eOAK4SFfVSx\
+             46ASnhV1pAlUUKIie3IHKVIDBhj72pGVYCRcXpbmP33Kvdpa4fDg5wyHJrH8\
+             jTEjyu5bKE68JTNFKTfAosZt/KpATYxq+VlZkdtECXoaiTjMW19jWYc7YOL9\
+             LSY7HRq9TzTHQRY98XXbtGFr0dmM7T2zl6kNJJq9MnxCAJjsG9ULUbLhKF58\
+             863/LtxhNnwxpECeDboGC+Q="
+  on:
+    tags: true
+    repo: goodtune/python-syra
+    python: 3.7
